--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>name of the hero <span> he's not a hero</span> </h1>
+    <h1>name of the hero <span> he's not a hero</span> no he's a hero </h1>
     <p>in the past there are a man who don't that he's a champion he think that he's just a normal human like the other but the trute he had a super power in her heart </p>
     <button class="d">more... </button>
         <p class="p2">maybe you asked now how he know that he's not normal hhh hold down the story just started</p>
